--- a/packages/hdwallet-native/package.json
+++ b/packages/hdwallet-native/package.json
@@ -14,6 +14,9 @@
     "prepublishOnly": "yarn clean && yarn build"
   },
   "dependencies": {
+    "@fioprotocol/fiojs": "^1.0.1",
+    "@fioprotocol/fiosdk": "latest",
+    "@mcchadwick/fiosdk": "^1.1.3",
     "@mcchadwick/hdwallet-core": "^1.2.0",
     "bchaddrjs": "^0.4.9",
     "bip32": "^2.0.5",
@@ -24,7 +27,8 @@
     "crypto-js": "^3.1.9-1",
     "ethereum-tx-decoder": "^3.0.0",
     "ethers": "^5.0.2",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "@types/bchaddrjs": "^0.4.0",
